2021-11-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix access to undefined array keys

2021-10-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure an array is passed when getting a value from a substructure

2021-10-05 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Release version 6.0.0

2021-10-04 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve documentation for "children" property (thanks to Mathias Brodala)
	* Allow for multiple report recipients (thanks to Mathias Brodala)
	* Review documentation, resolves #200

2021-10-03 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix command line exit codes, resolves #208
	* Fix slug generation upon upates, resolves #195

2021-09-29 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Allow for arrayPath to return simple values if needed, references #205

2021-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with PHP 8, resolves #207
	* Move command-line declaration to services configuration, references #164

2021-08-24 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Enhance arrayPath properties with conditions, resolves #205

2021-08-14 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add transformation option for detecting and acting on empty values, resolves #185

2021-08-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Introduce special exception for invalidating records, resolves #198

2021-06-09 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Pimp the log record icon

2021-05-30 Francois Suter (Idéative)  <typo3@ideative.ch>

	*  Improve documentation for newcomers, resolves #191

2021-05-29 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update all base URLs for documentation cross-links, resolves #183
	* Improve tutorial page, resolves #184

2021-05-28 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add arrayPath property at general level, also refactor ArrayHandler tests, resolves #175