@@ -34,7 +34,7 @@ class SchedulerRepositoryTest extends FunctionalTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = GeneralUtility::makeInstance(SchedulerRepository::class);
