@@ -45,7 +45,7 @@ class ImporterTest extends FunctionalTestCase
      */
     protected $subject;
 
-    protected function setUp()
+    protected function setUp(): void
     {
         parent::setUp();
         try {
