@@ -47,7 +47,7 @@ class StoreDataStepTest extends FunctionalTestCase
      */
     protected $objectManager;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->objectManager = GeneralUtility::makeInstance(ObjectManager::class);
