@@ -42,7 +42,7 @@ class TransformDataStepTest extends FunctionalTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = GeneralUtility::makeInstance(TransformDataStep::class);
