@@ -32,7 +32,7 @@ class ColumnConfigurationValidatorTest extends FunctionalTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         // Connector services need a global LanguageService object
