@@ -29,7 +29,7 @@ class ConfigurationKeyTest extends UnitTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = new ConfigurationKey();
