@@ -34,7 +34,7 @@ class ArrayHandlerTest extends UnitTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = new ArrayHandler();
