@@ -32,7 +32,7 @@ class XmlHandlerTest extends UnitTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = new XmlHandler();
