@@ -32,7 +32,7 @@ class ReportingUtilityTest extends UnitTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = GeneralUtility::makeInstance(
