@@ -31,7 +31,7 @@ class ValidationResultTest extends UnitTestCase
      */
     protected $subject;
 
-    public function setUp()
+    public function setUp(): void
     {
         parent::setUp();
         $this->subject = new ValidationResult();
